slide/src/test/ui/error/expected_expr_found_mult.slide
===in
1 + *
===in

~~~stdout
~~~stdout

~~~stderr
error: Expected an expression, found `*`
  |
1 | 1 + * 
  |     ^ expected an expression
  |

~~~stderr

~~~exitcode
1
~~~exitcode
